Refactor Avaliacao handling to use AvaliacaoRequest DTO and add mapping logic